Fix layout issues

--- a/emily.css
+++ b/emily.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   background-color: #fffbef;
   font-size: 1.5em; /* currently ems cause chrome bug misinterpreting rems on body element */
@@ -8,78 +12,54 @@ body {
   color: #342a2a;
 }
 
-.footer {
-  background-color: #6A722F;
-  color: #fffbef;
+.container {
+  max-width: none;
+  width: 80%;
 }
 
-.nav {
-  position: absolute;
-  height: 100%;
+.hero {
+  padding-top: 5%;
 }
 
-.skills {
-  background-color: #fff;
+.values {
+  padding: 15% 0;
 }
 
-.big-ass-wrapper {
-  position: relative;
-  min-height: calc(100vh - 145px);
+.values p {
+  font-size: 18px;
 }
 
-.wrap {
-  width: 50vw;
-  box-sizing: border-box;
-  line-height: 1.65;
-  position: absolute;
-  /*top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);*/
-}
-/*
-@media screen and (max-width: 800px) {
-  .wrap {
-    width: 75vw;
-  }
-}*/
-
-.wrap h6 {
-  margin: 0 0 20px;
-  font-size: 25px;
-}
-
-.wrap h6:last-child {
+.values h4, .skills h4 {
   margin: 0;
 }
 
-.wrap h6 a {
-  position: relative;
-  overflow: hidden;
-  text-decoration: none;
-  color: #342a2a;
-}
-
-.wrap h6 a::after {
-  content: "";
-    background: #C0E8F9;
-  position: absolute;
-  left: 12px;
-  bottom: -6px;
-  width: calc(100% - 8px);
-  height: calc(100% - 8px);
-  z-index: -1;
-  transition: 0.35s cubic-bezier(0.25, 0.1, 0, 2.05);
-}
-
-.wrap h6 a:hover:after {
-  left: 0;
-  bottom: -2px;
+.footer-wrapper {
   width: 100%;
-  height: 100%;
+  background-color: #6A722F;
+}
+
+.footer {
+  color: #fffbef;
 }
 
 .social {
   display: flex;
   flex-wrap: wrap;
-  margin-bottom: 5%;
+}
+
+/* Things will switch to a stacked layout below this breakpoint, so we don't
+   want to force heights. Also vh is bad news on mobile. */
+@media (min-width: 550px) {
+  html, body, .page {
+    height: 100%
+  }
+
+  .body {
+    height: calc(100vh - 185px);
+  }
+
+  .footer-wrapper {
+    padding: 20px 0;
+    height: 185px;
+  }
 }
